--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ SpeechRecognition==3.8.1
 streamlit==1.15.2
 streamlit_lottie==0.0.3
 streamlit_option_menu==0.3.2
-torch==1.13.0+cu117
+torch==1.13.0
 transformers==4.24.0
